<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.darren.assignment4.MainActivity"
    android:padding="12dp">

    <EditText
        android:id="@+id/input_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word"
        android:inputType="text"
        android:layout_toLeftOf="@+id/find_synonym"
        android:layout_toStartOf="@+id/find_synonym"/>
    <Button
        android:id="@+id/find_synonym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_synonym"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"/>
    <Button
        android:id="@+id/enter_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_word"
        android:text="@string/enter_values"
        android:layout_marginTop="12dp"/>

</RelativeLayout>
